--- a/src/loaders/solc-json/package.json
+++ b/src/loaders/solc-json/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "ethdeploy-solc-json-loader",
+  "name": "vapdeploy-solc-json-loader",
   "version": "1.0.0",
-  "description": "A solc json loader for ethdeploy.",
+  "description": "A solc json loader for vapdeploy.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/SilentCicero/ethdeploy.git"
+    "url": "git+ssh://git@github.com/vapjs/vapdeploy.git"
   },
   "keywords": [
     "solc",
     "loader",
-    "ethdeploy",
-    "ethereum",
+    "vapdeploy",
+    "vapory",
     "solidity"
   ],
   "author": "Nick Dodson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/SilentCicero/ethdeploy-solc-loader/issues"
+    "url": "https://github.com/vapjs/vapdeploy-solc-loader/issues"
   },
-  "homepage": "https://github.com/SilentCicero/ethdeploy-solc-loader#readme"
+  "homepage": "https://github.com/vapjs/vapdeploy-solc-loader#readme"
 }
