--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ethdeploy",
+  "name": "vapdeploy",
   "version": "1.0.8",
   "description": "A highly configurable contract deployment and staging utiltiy.",
   "main": "lib/index.js",
@@ -11,7 +11,7 @@
     "src"
   ],
   "bin": {
-    "ethdeploy": "./bin/ethdeploy.js"
+    "vapdeploy": "./bin/vapdeploy.js"
   },
   "scripts": {
     "start": "npm test",
@@ -40,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/SilentCicero/ethdeploy.git"
+    "url": "git+ssh://git@github.com/vapjs/vapdeploy.git"
   },
   "babel": {
     "plugins": [
@@ -112,17 +112,17 @@
     "clone-deep": "^0.2.4",
     "deep-assign": "2.0.0",
     "deep-equal": "1.0.1",
-    "ethjs-contract": "0.1.7",
-    "ethjs-query": "0.2.6",
+    "vapjs-contract": "0.1.7",
+    "vapjs-query": "0.2.6",
     "fs": "0.0.1-security",
     "meow": "3.7.0",
     "node-dir": "0.1.16",
     "strip-hex-prefix": "1.0.0"
   },
   "devDependencies": {
-    "ethdeploy-environment-loader": "file:./src/loaders/environment",
-    "ethdeploy-solc-loader": "file:./src/loaders/solc",
-    "ethdeploy-raw-solc-loader": "file:./src/loaders/raw-solc",
+    "vapdeploy-environment-loader": "file:./src/loaders/environment",
+    "vapdeploy-solc-loader": "file:./src/loaders/solc",
+    "vapdeploy-raw-solc-loader": "file:./src/loaders/raw-solc",
     "babel-cli": "6.18.0",
     "babel-core": "6.18.2",
     "babel-eslint": "7.1.0",
@@ -164,9 +164,9 @@
     "eslint-plugin-import": "1.8.0",
     "eslint-plugin-jsx-a11y": "1.2.0",
     "eslint-plugin-react": "5.1.1",
-    "ethereumjs-testrpc": "3.0.2",
-    "ethjs-provider-signer": "^0.1.0",
-    "ethjs-signer": "^0.1.0",
+    "vaporyjs-testrpc": "3.0.2",
+    "vapjs-provider-signer": "^0.1.0",
+    "vapjs-signer": "^0.1.0",
     "eventsource-polyfill": "0.9.6",
     "istanbul": "0.4.5",
     "json-loader": "0.5.4",
@@ -182,16 +182,16 @@
     "node": ">=6.5.0"
   },
   "keywords": [
-    "ethereum",
+    "vapory",
     "events",
     "rpc"
   ],
   "author": "Nick Dodson <nick.dodson@consensys.net>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/SilentCicero/ethdeploy/issues"
+    "url": "https://github.com/vapjs/vapdeploy/issues"
   },
-  "homepage": "https://github.com/SilentCicero/ethdeploy#readme",
+  "homepage": "https://github.com/vapjs/vapdeploy#readme",
   "lint-staged": {
     "lint:eslint": "*.js"
   },
